주문완료 제목 추가

--- a/orders/templates/orders/order_complete.html
+++ b/orders/templates/orders/order_complete.html
@@ -8,6 +8,7 @@
 {% endblock css %}
 
 {% block body %}
+  <h1 class='main-header'>주문 완료</h1>
   <main class='receipt'>
     <article class='receipt-body'>
       <h1 class='head'>RECEIPT</h1>
