상품 등록/수정페이지 수정

--- a/products/templates/products/products_create.html
+++ b/products/templates/products/products_create.html
@@ -7,6 +7,7 @@
     <form action="{% url 'products:products_create' %}" method="POST" enctype='multipart/form-data'>
       {% csrf_token %}
       {% bootstrap_form create_form %}
+      {% bootstrap_form product_image_form %}
       <input class="btn btn-primary" type="submit" id="" value="등록">
     </form>
   </div>
