--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -242,6 +242,7 @@
         {% comment %} 상품정보 {% endcomment %}
         <article id='pdt-info'>
           <h3>상품정보</h3>
+          <p class='pdt-description-text'>{{ product.Description1 }}</p>
           <img src="{{ product.Description2.url }}" alt="">
         </article>
         {% comment %} 리뷰 {% endcomment %}
