--- a/products/templates/products/products_update.html
+++ b/products/templates/products/products_update.html
@@ -7,6 +7,7 @@
     <form action="" method="POST" enctype='multipart/form-data'>
       {% csrf_token %}
       {% bootstrap_form form %}
+      {% bootstrap_form product_image_form %}
       <input class="btn btn-success" type="submit" id="" value="수정">
     </form>
   </div>
