최근 리뷰 3개만 보이게 수정

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -146,7 +146,7 @@
               <th>리뷰 제목</th>
             </tr>
           </thead>
-          {% for review in reviews %}
+          {% for review in reviews|slice:":3" %}
             <tbody>
               <tr>
                 <td class="review__td--img">
