--- a/accounts/templates/accounts/change_ps.html
+++ b/accounts/templates/accounts/change_ps.html
@@ -6,7 +6,7 @@
 
   <div id="pw-update">
     <div class="tit-area">
-      <h1 class='tit'>비빌번호 수정하기</h1>
+      <h1 class='tit'>비밀번호 수정하기</h1>
     </div>
     <div class='form-area'>
       <form action="" method="POST" class="pw-update-form">
