--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -378,7 +378,7 @@
                     {{review.content}}
                   </p>
                   {% if review.review_image %}
-                  <img src="{{ review.thumbnail.url }}" alt="{{review.review_image}}" class="rev-img">
+                  {% comment %} <img src="{{ review.thumbnail.url }}" alt="{{review.review_image}}" class="rev-img"> {% endcomment %}
                   <div class="overlayC2 hidden">
                     <button class="btn-close btn-close-img">
                       <i class="bi bi-x-lg"></i>
