상품목록페이지 수정

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -41,10 +41,10 @@
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
       </button>
       <ul class="dropdown-menu" name='filter'>
-        <li><a class="dropdown-item active" href="/products/{{ category }}?filter=register">등록일순</a></li>
-        <li><a class="dropdown-item" href="/products/{{ category }}?filter=high-sale">높은할인률순</a></li>
-        <li><a class="dropdown-item" href="/products/{{ category }}?filter=high-price">높은가격순</a></li>
-        <li><a class="dropdown-item" href="/products/{{ category }}?filter=low-price">낮은가격순</a></li>
+        <li><a class="dropdown-item active" href="/products/{{ category }}/?filter=register">등록일순</a></li>
+        <li><a class="dropdown-item" href="/products/{{ category }}/?filter=high-sale">높은할인률순</a></li>
+        <li><a class="dropdown-item" href="/products/{{ category }}/?filter=high-price">높은가격순</a></li>
+        <li><a class="dropdown-item" href="/products/{{ category }}/?filter=low-price">낮은가격순</a></li>
       </ul>
     </div>
     {% comment %} 크리스마스 카드/리스/트리장식 {% endcomment %}
